Fixing spacing below featured event block.

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -111,6 +111,7 @@ body {
 	display: flex;
 	-webkit-flex-flow: row wrap;
 	flex-flow: row wrap;
+	padding-bottom: 10px;
 }
 
 #header h1 {
